🙁binaries in git.

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <hr class="my-4">
 <div class="row">
     <div class="col-md-4 d-none d-md-block order-md-0">
-        <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-ride="carousel">
+        <div id="carouselScreenshots" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <picture class="d-block w-100">
@@ -25,7 +25,7 @@
                         <img src="/images/TypiqueRaceEntry.png" alt="Results entry" class="d-block w-100">
                     </picture>
                 </div>
-                <div class="carousel-item active">
+                <div class="carousel-item">
                     <picture class="d-block w-100">
                         <source srcset="images/TypiqueSeriesCS_343.webp 1x, images/TypiqueSeriesCS.webp 2x"
                                 type="image/webp" class="d-block w-100">
