--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -12,32 +12,16 @@
         <div id="carouselScreenshots" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <picture class="d-block w-100">
-                        <source srcset="images/TypiqueSeries_343.webp 1x, images/TypiqueSeries.webp 2x"
-                                type="image/webp" class="d-block w-100">
-                        <img src="/images/TypiqueSeries.png" alt="Series results" class="d-block w-100">
-                    </picture>
+                    <img src="/images/TypiqueSeries.webp" alt="Typical Series results" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <picture>
-                        <source srcset="images/TypiqueRaceEntry_343.webp 1x, images/TypiqueRaceEntry.webp 2x"
-                                type="image/webp" class="d-block w-100">
-                        <img src="/images/TypiqueRaceEntry.png" alt="Results entry" class="d-block w-100">
-                    </picture>
+                    <img src="/images/TypiqueRaceEntry.webp" alt="Results entry" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <picture class="d-block w-100">
-                        <source srcset="images/TypiqueSeriesCS_343.webp 1x, images/TypiqueSeriesCS.webp 2x"
-                                type="image/webp" class="d-block w-100">
-                        <img src="/images/TypiqueSeriesCS.png" alt="Series results" class="d-block w-100">
-                    </picture>
+                    <img src="/images/TypiqueSeriesCS.webp" alt="Cox-Sprague Series results" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <picture class="d-block w-100">
-                        <source srcset="images/TypiqueMainPage_343.webp 1x, images/TypiqueMainPage.webp 2x"
-                                type="image/webp" class="d-block w-100">
-                        <img src="/images/TypiqueMainPage.png" alt="Club main page" class="d-block w-100">
-                    </picture>
+                    <img src="/images/TypiqueMainPage.webp" alt="Sample club main page" class="d-block w-100">
                 </div>
             </div>
         </div>
