Lazy loading enabled
And fewer calls to the database

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -12,16 +12,16 @@
         <div id="carouselScreenshots" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/TypiqueSeries.webp" alt="Typical Series results" class="d-block w-100">
+                    <img src="/images/TypiqueSeries.webp" alt="Typical Series results" loading="lazy" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/TypiqueRaceEntry.webp" alt="Results entry" class="d-block w-100">
+                    <img src="/images/TypiqueRaceEntry.webp" alt="Results entry" loading="lazy" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/TypiqueSeriesCS.webp" alt="Cox-Sprague Series results" class="d-block w-100">
+                    <img src="/images/TypiqueSeriesCS.webp" alt="Cox-Sprague Series results" loading="lazy" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/TypiqueMainPage.webp" alt="Sample club main page" class="d-block w-100">
+                    <img src="/images/TypiqueMainPage.webp" alt="Sample club main page" loading="lazy" class="d-block w-100">
                 </div>
             </div>
         </div>
