Cox-Sprague code descriptions

--- a/SailScores.Web/Views/ScoringSystem/Edit.cshtml
+++ b/SailScores.Web/Views/ScoringSystem/Edit.cshtml
@@ -92,7 +92,7 @@
         New Score Code
     </span>
 </a></h3>
-            <table class="table" summary="Score Codes in system">
+        <table class="table table-sm" summary="Score Codes in system">
                 <thead>
                     <tr>
                         <th scope="col"></th>
