Fix Header vertical alignment

--- a/SailScores.Web/Views/Shared/_Layout.cshtml
+++ b/SailScores.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -61,7 +61,7 @@
     <header class="bg-dark">
         <div class="container-lg py-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SailScores</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand sailscores-brand">SailScores</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <small>
-                        &copy; 2022 - J. Fraser &ndash;
+                        &copy; 2023 - J. Fraser &ndash;
                         <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a>
                     </small>
                 </div>
