--- a/SailScores.Web/Views/Race/Delete.cshtml
+++ b/SailScores.Web/Views/Race/Delete.cshtml
@@ -46,3 +46,19 @@
            class="btn btn-outline-primary">Cancel</a>
     </form>
 </div>
+
+<div id="ssWaitingModal" class="waitingModal">
+    <span><div class="spinner-border" role="status"></div><br/>
+        <h3>Removing...</h3></span>
+</div>
+
+@section Scripts {
+    <script>
+        var waiting = $('#ssWaitingModal');
+        if (!!waiting) {
+            waiting.show();
+        }
+        $('#submitButton').attr('value', 'Please wait...');
+    </script>
+
+}
