--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -7,13 +7,13 @@
     <h3>November 18th, 2023</h3>
     <h5>Cox-Sprague Scoring</h5>
     <p>
+        <em>[edited to clarify comparison to High Point Percentage.]</em>
         We've added Cox-Sprague scoring as a supported option. In this
-        variant of High Point Percentage scoring, races
-        are weighted according to the number of competitors who came to the starting area,
-        versus basic High Point Percentage, in which every race is given equal weight. A single
-        race with eleven competitors counts as much as two races with four competitors.
-        The difference in weighting stops at a point: races with 20 or more boats all
-        contribute equally to the total.
+        variant of High Point Percentage scoring, results are given more
+        weight for top finishes. In addition, race weight is tweaked so that races
+        with small participant counts get smaller relative weight than they
+        would in straight High Point Percentage. The difference increases as the
+        fleet gets smaller: a three boat race contributes triple that of a two boat race.
     </p><p>
         Core to SailScores: races can belong to multiple series, even series that are scored
         differently. With the addition
@@ -28,11 +28,6 @@
         allows custom codes that count as participation but are not included in the
         total score. Use this approach for volunteer non-sailing days, e.g., "RC - Race
         Committee Duty".
-    </p><p>
-        Since a percentage system, like Cox-Sprague or basic High Point Percentage,
-        doesn't punish missing a race, it doesn't encourage participation like a
-        low point system does. To encourage participation, discards
-        can be added to percentage scoring.
     </p><p>
         Cox-Sprague discards can be surprising: with race weighting, discarding the
         lowest score or lowest percentage does <em>not</em> always improve a Cox-Sprague percentage total more
