--- a/SailScores.Web/Views/WhatIf/Results.cshtml
+++ b/SailScores.Web/Views/WhatIf/Results.cshtml
@@ -1,12 +1,14 @@
-﻿@model SailScores.Web.Models.SailScores.MergeCompetitorViewModel
+﻿@model SailScores.Web.Models.SailScores.WhatIfResultsViewModel
 
 @{
-    ViewData["Title"] = "Merge Competitors (2/4)";
+    ViewData["Title"] = "What If results";
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
-<h2>Merge</h2>
-
+<h2>What if</h2>
+<p class="bd-lead">
+Check how the series results would change if scored with different options.
+</p>
 <h4>Source (will be removed)</h4>
 <hr />
 <div class="row">
@@ -26,9 +28,9 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Verify">
-            <input type="hidden" id="Id" asp-for="TargetCompetitorId" />
+            <input type="hidden" id="SeriesId" asp-for="SeriesId" />
             <div class="form-group">
-                <label asp-for="SourceCompetitorId" class="control-label">Competitor <em>Required</em></label>
+                @* <label asp-for="SourceCompetitorId" class="control-label">Competitor <em>Required</em></label>
                 <select asp-for="SourceCompetitorId" class="form-control">
                     <option selected="selected">Select a racer...</option>
                     @foreach (var comp in Model.SourceCompetitorOptions)
@@ -38,7 +40,7 @@
                 </option>
                     }
                 </select>
-                <span asp-validation-for="SourceCompetitorId" class="text-danger"></span>
+                <span asp-validation-for="SourceCompetitorId" class="text-danger"></span> *@
             </div>
 
             <div class="form-group">
