Whatif results display

--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -13,6 +13,9 @@
 @{
     bool NoCompetitors = false;
     var results = Model.FlatResults;
+    if (ViewData["AlternateResults"] != null){
+        results = (FlatResults)ViewData["AlternateResults"];
+    }
 }
 
 @if (Model != null)
