Additional error handling and messages

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -37,9 +37,9 @@
         score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
     </p>
     <p>
-        Should storage or other service costs (such as speech
-        recognition) become a larger cost, we may need to pass some
-        costs on to users of the "Premium" features. But we are committed
+        Should storage or other service fees (such as speech
+        recognition) become larger costs, we may need to pass some of
+        them on to users of the "Premium" features. But we are committed
         to always providing a free option. Our clubs haven't had
         large budgets and would have benefited from SailScores. We'd like to share.
     </p>
