--- a/SailScores.Web/Views/Regatta/Delete.cshtml
+++ b/SailScores.Web/Views/Regatta/Delete.cshtml
@@ -27,6 +27,7 @@
     </dl>
     
     <form asp-action="Delete">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
         <input type="submit" value="Delete" class="btn btn-danger" />
