--- a/SailScores.Web/Views/Series/Details.cshtml
+++ b/SailScores.Web/Views/Series/Details.cshtml
@@ -20,7 +20,19 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h1 class="h2">@Model.Item.Name</h1>
+        <h1 class="h2">
+            @Model.Item.Name
+            @if(Model.CanEdit)
+            {
+                <a class="btn btn-sm btn-outline-primary"
+                    asp-action="Edit"
+                    asp-controller="Series"
+                    asp-route-id="@Model.Item.Id"
+                    title="Edit">
+                    <span class="fas fa-pen"></span>
+                </a>
+            }
+        </h1>
         @if (!String.IsNullOrWhiteSpace(Model.Item.Description))
         {
             <h5>@Model.Item.Description</h5>
@@ -54,14 +66,6 @@
                        asp-route-seriesId="@Model.Item.Id"
                        asp-route-returnUrl="@settingsService.GetPreferredUri(Context.Request)"
                        class="btn btn-outline-primary">@localizer["New Race"]</a>
-                </div>
-                <div class="col-sm-4 my-2">
-                    <a asp-route="WhatIf"
-                       asp-route-action="options"
-                       asp-route-seriesId="@Model.Item.Id"
-                       asp-route-clubInitials="@ViewContext.RouteData.Values["ClubInitials"]"
-                       class="btn btn-outline-primary"
-                       title="Test scoring changes">@localizer["What If?"]</a>
                 </div>
             </div>
         }
