--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -13,7 +13,7 @@
 <h4>Series</h4>
 <hr />
 <div class="row">
-    <div class="col-lg-4 col-md-8">
+    <div class="col-xl-4 col-lg-6 col-md-8">
         <form asp-action="Edit">
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ClubId" />
@@ -23,7 +23,6 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <!-- Should display uneditable urlName here? -->
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
@@ -81,6 +80,12 @@
                                 <span asp-validation-for="TrendOption" class="text-danger"></span>
                             </div>
                             <div class="form-group">
+                                <div class="form-check">
+                                    <input class="form-check-input" asp-for="ExcludeFromCompetitorStats" />
+                                    <label class="form-check-label"> Exclude from competitor summary statistics</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <label asp-for="ScoringSystemId">Scoring System</label>
                                 <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
                                     @foreach (var scoringSystem in Model.ScoringSystemOptions)
@@ -93,10 +98,14 @@
                                 <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <div class="form-check">
-                                    <input class="form-check-input" asp-for="ExcludeFromCompetitorStats" />
-                                    <label class="form-check-label"> Exclude from competitor summary statistics</label>
-                                </div>
+                                <label>Scoring "What If"</label>
+                                <a class="form-control"
+                                   asp-route="WhatIf"
+                                   asp-route-action="options"
+                                   asp-route-seriesId="@Model.Id"
+                                   asp-route-clubInitials="@ViewContext.RouteData.Values["ClubInitials"]"
+                                   class="btn btn-outline-primary"
+                                   title="Test scoring changes">Try Different Scoring</a>
                             </div>
                         </div>
                     </div>
