--- a/SailScores.Web/Views/WhatIf/Results.cshtml
+++ b/SailScores.Web/Views/WhatIf/Results.cshtml
@@ -4,25 +4,41 @@
 
 @{
     var results = Model.Series.FlatResults;
+    var alternateResults = Model.AlternateResults;
     ViewData["Title"] = "What If results";
     ViewData["WideLayout"] = (results.Races?.Count() ?? 0) > 7;
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
-<h2>What if</h2>
+<h2>Scores</h2>
 <p class="bd-lead">
-Check how the series results would change if scored with different options.
+Immediately below is the preview scoring. After that are the currently shared results.
 </p>
-<h4>Blah</h4>
 <hr />
 
 <div class="row">
     <div class="col-md-6">
-        <h1 class="h2">@Model.Series.Name</h1>
-        @if (!String.IsNullOrWhiteSpace(Model.Series.Description))
+        <h4>
+        @alternateResults.NumberOfSailedRaces @localizer["races sailed with"] @alternateResults.NumberOfDiscards
+        @localizer["discards"],
+        @alternateResults.Competitors.Count() @localizer["competitors"]
+        @if (!String.IsNullOrWhiteSpace(@alternateResults.ScoringSystemName))
         {
-            <h5>@Model.Series.Description</h5>
+            @:&ndash; @alternateResults.ScoringSystemName
         }
+        @if (alternateResults.IsPercentSystem && alternateResults.PercentRequired.HasValue && alternateResults.PercentRequired.Value > 1)
+        {
+            @:&ndash; @alternateResults.PercentRequired.Value.ToString("G5")% participation required for ranking
+        } </h4>
+    </div>
+</div>
+@await Html.PartialAsync("_ResultsTable", Model.Series,
+                                new ViewDataDictionary(this.ViewData) {
+                                { "ExcludeCompetitorLinks", true },
+                                { "AlternateResults", Model.AlternateResults }})
+<div class="row">
+    <div class="col-md-6">
+        <h4>
         @results.NumberOfSailedRaces @localizer["races sailed with"] @results.NumberOfDiscards
         @localizer["discards"],
         @results.Competitors.Count() @localizer["competitors"]
@@ -34,26 +50,13 @@ Check how the series results would change if scored with different options.
         {
             @:&ndash; @results.PercentRequired.Value.ToString("G5")% participation required for ranking
         }
-        @if (Model.Series.ExcludeFromCompetitorStats)
-        {
-            <br />
-
-            @:<small>This series is excluded from competitor stats.</small>
-        }
+        </h4>
     </div>
-
 </div>
 @await Html.PartialAsync("_ResultsTable", Model.Series,
-                            new ViewDataDictionary(this.ViewData) {
-                                { "ExcludeCompetitorLinks", true },
-                            //    { "AlternateResults", false }
-                            })
-
-@await Html.PartialAsync("_ResultsTable", Model.Series,
                                 new ViewDataDictionary(this.ViewData) {
-                                { "ExcludeCompetitorLinks", true },
-                                { "AlternateResults", Model.AlternateResults }})
-
+                                { "ExcludeCompetitorLinks", true }
+                            })
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
