What if work continues

--- a/SailScores.Web/Views/Competitor/Details.cshtml
+++ b/SailScores.Web/Views/Competitor/Details.cshtml
@@ -61,7 +61,7 @@
 </div>
 <div class="row">
     <div class="col-12">
-        Statistics compiled from multiple, but not necessarily all, series.
+        Statistics may not include all series.
     </div>
 </div>
 
