--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -8,13 +8,12 @@
     Layout = "~/Views/Shared/_ClubLayout.cshtml";
 }
 
-<h2>Edit</h2>
-
-<h4>Series</h4>
+<h3>Edit Series Properties</h3>
 <hr />
 <div class="row">
     <div class="col-xl-4 col-lg-6 col-md-8">
-        <form asp-action="Edit">
+        <form asp-action="Edit"
+              asp-route-returnurl="@ViewData["ReturnUrl"]" >
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ClubId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -104,6 +103,7 @@
                                    asp-route-action="options"
                                    asp-route-seriesId="@Model.Id"
                                    asp-route-clubInitials="@ViewContext.RouteData.Values["ClubInitials"]"
+                                   asp-route-returnUrl="@ViewData["ReturnUrl"]"
                                    class="btn btn-outline-primary"
                                    title="Test scoring changes">Try Different Scoring</a>
                             </div>
@@ -114,9 +114,7 @@
             <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
-                <a asp-controller="Admin"
-                   asp-action="Index"
-                   asp-fragment="series"
+                <a href="@(ViewData["ReturnUrl"] ?? Url.Action("Index", "Admin"))"
                    class="btn btn-outline-primary">Cancel</a>
             </div>
 
