--- a/SailScores.Web/Views/WhatIf/Options.cshtml
+++ b/SailScores.Web/Views/WhatIf/Options.cshtml
@@ -16,12 +16,13 @@ Check how series results change if scored with different options.
 <hr />
 <div class="row">
     <div class="col-12">
-        Select a scoring system and a number of discards to try:
+        Select a scoring system and a number of discards to test
     </div>
 </div>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Show">
+        <form asp-action="Show"
+              asp-route-returnurl="@ViewData["ReturnUrl"]">
             <input type="hidden" id="SeriesId" asp-for="Series.Id" />
             <div>
                 <label asp-for="SelectedScoringSystemId">Scoring System</label>
@@ -50,8 +51,11 @@ Check how series results change if scored with different options.
             </div>
             <div class="form-group">
                 <input type="submit" value="Calculate Results" class="btn btn-primary my-2" />
-                <a url="/"
-                   class="btn btn-outline-primary">Cancel</a>
+                <a class="btn btn-outline-primary"
+                    asp-action="Edit"
+                    asp-controller="Series"
+                    asp-route-id="@Model.SeriesId"
+                    asp-route-returnUrl="@ViewData["ReturnUrl"]">Cancel</a>
             </div>
         </form>
     </div>
